[giphy] Fix: (giphy-api-input-modal, giphy-selecter.scss, giphyApiModal.jsx): fix issues on mobile layout, spacing, icons and remove upper part of navbar

--- a/packages/plugin-giphy/statics/styles/giphy-api-input-modal.scss
+++ b/packages/plugin-giphy/statics/styles/giphy-api-input-modal.scss
@@ -5,8 +5,11 @@
   width: 227px;
   padding-top: 6px;
   @include phone {
-    width: calc(100% - 40px);
+    width: 100vw;
     padding: 20px;
+    padding-top: 12px;
+    box-sizing: border-box;
+    overflow: hidden;
   }
 }
 
@@ -26,6 +29,7 @@
 .giphy_api_input_modal_search {
   width: 100%;
   box-sizing: border-box;
+  padding: 0px;
   padding-right: 20px;
   height: 17px;
   font-family: Helvetica;
@@ -47,6 +51,8 @@
   position: absolute;
   right: 0px;
   top: 2px;
+  opacity: .7;
+  height: 17px;
 }
 
 .giphy_api_input_modal_closeIcon {
@@ -69,25 +75,18 @@
   letter-spacing: normal;
   text-align: center;
   color: #ffffff;
-}
-
-.giphy_api_input_modal_header {
-  width: 100%;
-  height: 20px;
-  background: rgb(0, 86, 229);
-  display: block;
+  position: relative;
 }
 
 .giphy_api_input_modal_backButton {
   position: absolute;
-  top: 37.5px;
+  top: 50%;
   left: 23.5px;
-  width: 200px;
   width: 12px;
   height: 12px;
   background: none;
   border: none;
-  transform: rotate(45deg);
+  transform: translateY(-50%) rotate(45deg);
   border-bottom: solid 1px #ffffff;
   border-left: solid 1px #ffffff;
 }
